final project with gh-pages module

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Responsive portfolio website",
     "main": "index.js",
     "scripts": {
-        "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+        "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+        "deploy": "gh-pages -d dist"
     },
     "author": "Soffi Zahir",
     "license": "MIT",
