--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "modern_portfolio",
+    "name": "azul",
     "version": "1.0.0",
     "description": "Responsive portfolio website",
     "main": "index.js",
+    "homepage": "https://github.com/Soffi-Zahir/azul",
     "scripts": {
         "sass": "node-sass -w scss/ -o dist/css/ --recursive",
         "deploy": "gh-pages -d dist"
